--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,9 +5,10 @@
 
     <h1>AtmosQuery</h1>
         <hr>
-            <form method="post" action="/">
-                <input class="search-bar" name="location" required autocorrect="off">
-                <button id="search" type="submit">search</button>
+        <div class="center-container">
+            <form class="initial-search" method="post" action="/">
+                <input name="location" required autocorrect="off">
+                <button class="button" type="submit">search</button>
             </form>
-
-{% endblock %}        
+        </div>
+{% endblock %}
