--- a/static/styles.css
+++ b/static/styles.css
@@ -1,43 +1,32 @@
-@import "https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css";
 
 :root {
-  --bg-main: #1B1725;
-  --card-bg: #9DC7C8;
-  --accent-cool: #077187;
-  --accent-warm: #F6AE2D;
-  --accent-hot: #FF3A20;
+  --main: #1B1725;
+  --card: #9DC7C8;
+  --cool: #077187;
+  --warm: #F6AE2D;
+  --hot: #FF3A20;
+}
+
+html, body {
+    height: 100%;
+    margin:0%;
 }
 
 body {
-    background-color: var(--bg-main);
+    background-color: var(--main);
 }
 
-.initial-search {
-    
+
+.parent-initial{
+    height: 100%;
+    margin: 0px;
+    display: flex;
     justify-content: center;
     align-items: center;
-
+    flex-direction: column;
 }
 
-.standard_search {
+.search-initial{
+    display: flex;
     
-    justify-content: right;
-    align-items: flex-start;
-    padding-top: 50px;
-    padding-right: 50px;
-}
-
-.button.search-button{
-    background-color: var(--card-bg);
-
-}
-
-.center-container {
-    display: flex;
-    justify-content: center; /* horizontal centering */
-    margin-top: 20px;        /* optional spacing */
-}
-
-.right-container{
-    display: flex;
 }
