--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,17 @@
 {% extends "layout.html" %}
 
 {% block main %}
-    <h1>AtmosQuery</h1>
-        <div class="right-container">
-            <form class="standard-search" method="post" action="/">
-                <input name="location" required autocorrect="off">
-                <button id="search" type="submit">search</button>
-            </form>
-        </div>
+    <div class="main-parent">
+        <h1 class="title">AtmosQuery</h1>
+            <div class="search-bar">
+                <form class="standard-search" method="post" action="/">
+                    <input name="location" required autocorrect="off">
+                    <button id="search" type="submit">search</button>
+                </form>
+            </div>
         
         {% if data.current %}
-        <div class="temp">
+        <div class="temp-display">
             <h2>temperature</h2>
             <p>Current: {{ data.current.temp_f }}F</p>
             <p>Feels-Like: {{ data.current.feelslike_f }}F</p>
@@ -18,6 +19,7 @@
         {% else %}
             <p>error fetching data</p>
         {% endif %}
+    </div>
         
 
 {% endblock %}
