--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,12 @@
     <head>
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <title>AtmosQuery</title> 
+        <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta name="viewport" content="initial-scale=1, width=device-width">
+        <title>AtmosQuery</title> 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
         <script src="{{ url_for('static', filename='main.js') }}"></script>
 
