--- a/static/styles.css
+++ b/static/styles.css
@@ -19,14 +19,27 @@ body {
 
 .parent-initial{
     height: 100%;
-    margin: 0px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    
+    
 }
 
 .search-initial{
+    width: 50%;
+    margin: auto;
     display: flex;
+    gap: 0.5rem;
     
+}
+
+#title-initial{
+    margin-top: 20%;
+    text-align: center;
+}
+
+.form-initial{
+    width: 100%;
 }
