--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta name="viewport" content="initial-scale=1, width=device-width">
-        <title>AtmosQuery</title> 
-        <!DOCTYPE html>
+
 <html lang="en">
     <head>
         <meta name="viewport" content="initial-scale=1, width=device-width">
@@ -14,6 +10,10 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
         <script src="{{ url_for('static', filename='main.js') }}"></script>
+
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+        </style>
 
     </head>
         <body>
