Working Cloud Animation. Pre Background sun flare anim test

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,14 +6,14 @@
 
         <div class="title-init">
             <div class="cloud-wrapper">
-                <img src="{{ url_for('static', filename='images/clearbackground-cloud.png') }}" alt="clouds" class="cloud cloud-left">
+                <img src="{{ url_for('static', filename='images/clearbackground-cloud.png') }}" alt="clouds" id="cloud-animate-l-side" class="cloud cloud-left">
                 <h1 id="logo-text" >AtmosQuery</h1>
-                <img src="{{ url_for('static', filename='images/clearbackground-cloud.png') }}" alt="clouds" class="cloud cloud-right">
+                <img src="{{ url_for('static', filename='images/clearbackground-cloud.png') }}" alt="clouds" id="cloud-animate-r-side" class="cloud cloud-right">
             </div>
             <div class="title-subscript">
-                <hr class="dashline dashline-left">
+                <hr class="dashline">
                 <p id="title-subscript">What's up there?</p>
-                <hr class="dashline dashline-right">
+                <hr class="dashline">
             </div>
         </div>
             
