--- a/static/styles.css
+++ b/static/styles.css
@@ -30,7 +30,7 @@ body {
   background:
     radial-gradient(
       circle at 50% 25%,
-      rgba(255,255,255,0.20),
+      rgba(255,255,255,0.30),
       transparent 55%
     ),
     linear-gradient(
@@ -54,15 +54,51 @@ body {
     height: auto;
 }
 
-.cloud-right{
-    transform: scaleX(-1);
+
+/* dont touch this its hanging on by a thread*/
+
+#cloud-animate-l-side {
+    opacity: 0;
+    transform: translateX(-100px);
+    animation: slideRightFade 2.5s cubic-bezier(0.22, 1, 0.36, 1) forwards;
 }
 
+#cloud-animate-r-side{
+    opacity: 0;
+    transform: translateX(100px) scaleX(-1);
+    animation: slideLeftFade 2.5s cubic-bezier(0.22, 1, 0.36, 1) forwards
+}
+
+@keyframes slideLeftFade {
+    to {
+        opacity: 1;
+        transform: translateX(0) scaleX(-1);
+    }
+}
+
+@keyframes slideRightFade {
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+
+
+
+
+/*atmosquery logo center*/
 .title-init{
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+
+
+
+
+
+/*SUBSCRIPT*/
 
 #title-subscript{
     justify-self: center;
@@ -84,7 +120,13 @@ body {
   border: none;        
   border-top: 1px solid #ffffff; /* custom line */
   margin: 1rem auto;  
+
 }
+
+
+
+
+/*welcome page flexbox properties*/
 
 .page-welcome{
     height: 100%;
