--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -24,6 +24,8 @@
             </form>
         </div>
           
-        <div class="bottom-"></div>
+        <div class="bottom-">
+          <p>Powered by <a href="https://www.weatherapi.com/" title="Free Weather API">WeatherAPI.com</a></p>
+        </div>
     </div>
 {% endblock %}
