--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,13 @@
 {% extends "layout.html" %}
 
 {% block main %}
+
+
+<div class="main-page"></div> 
     <div class="top-bar">
         <div></div>
         <div>
-        <h1 class="title">AtmosQuery</h1>
+        <h1 id="logo-text-small" class="title">AtmosQuery</h1>
         </div>
         <div class="search-bar">
             <form class="standard-search" method="post" action="/">
@@ -22,6 +25,6 @@
             <p>error fetching data</p>
         {% endif %}
         </div>
-        
+</div>        
 
 {% endblock %}
