--- a/templates/index.html
+++ b/templates/index.html
@@ -12,15 +12,15 @@
 
         <div class="search-bar">
             <form class="standard-search" method="post" action="/">
-                <input name="location" required autocorrect="off">
-                <button class="btn btn-outline-secondary" id="search" type="submit">search</button>
+                <input placeholder="location" name="location" required autocorrect="off">
+                <button class="btn btn-primary" id="search" type="submit">search</button>
             </form>
         </div>
 
     </div>
         {% if data.current %}
         <div class="temp-display">
-            <h2>temperature</h2>
+            <p>{{ data.location.name }},&nbsp{{ data.location.region }}</p>
             <p>Current: {{ data.current.temp_f }}F</p>
             <p>Feels-Like: {{ data.current.feelslike_f }}F</p>
         {% else %}
