layout main card

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
     </div>
         {% if data.current %}
-        <div class="temp-display">
+        <div class="info-card">
             <p>{{ data.location.name }},&nbsp{{ data.location.region }}</p>
             <p>Current: {{ data.current.temp_f }}F</p>
             <p>Feels-Like: {{ data.current.feelslike_f }}F</p>
