--- a/static/styles.css
+++ b/static/styles.css
@@ -24,7 +24,6 @@
 
 
 html, body {
-    height: 100%;
     margin:0%;
 }
 
@@ -134,7 +133,7 @@ body {
 /*welcome page flexbox properties*/
 
 .page-welcome{
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -174,13 +173,13 @@ body {
 keep main page style confined to this area */
 
 .main-page{
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    background-color: #2a5298;
+    background-color: #2a243a;
 }
 
 #logo-text-small{
@@ -191,7 +190,8 @@ keep main page style confined to this area */
 }
 
 .top-bar{
-    background-color: #1e3c72;
+    height: auto;
+    background-color: #2e508f;
     display: flex;
     width: 100%;
     flex-direction: row;
@@ -200,11 +200,24 @@ keep main page style confined to this area */
     padding-bottom: 20px;
     padding-top: 2%;
     border-bottom: 2px solid #ffffff;
+    box-shadow: 0px 3px 0px #012120;
 }
 
 
-.temp-display{
+.info-card{
     color: aliceblue;
-    display: flex;
+    height: 80vh;
+    width: 75%;
+    margin-top: 5%;
     gap: 5px;
+    background-color: #2e508f;
+    border: 2px solid #ffffff;
+    border-radius: 15px;
+    box-shadow:
+    0 12px 30px rgba(0, 0, 0, 0.22),
+    0 6px 12px rgba(0, 0, 0, 0.15);
+
+    display: flex;
+    flex-direction: column;
 }
+
