--- a/static/styles.css
+++ b/static/styles.css
@@ -16,6 +16,32 @@
   font-style: normal;
 }
 
+.space-mono-regular {
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.space-mono-bold {
+  font-family: "Space Mono", monospace;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.space-mono-regular-italic {
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.space-mono-bold-italic {
+  font-family: "Space Mono", monospace;
+  font-weight: 700;
+  font-style: italic;
+
+}
+
+
 #logo-text{
     font-family: "Major Mono Display", monospace;
     font-size: clamp(2.5rem, 8vw, 6rem);
@@ -219,5 +245,13 @@ keep main page style confined to this area */
 
     display: flex;
     flex-direction: column;
+
+    font-family: "Space Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
 }
 
+.temperature{
+    display: flex;
+    gap: 2%;
+}
