--- a/static/styles.css
+++ b/static/styles.css
@@ -250,14 +250,30 @@ keep main page style confined to this area */
     font-weight: 400;
     font-style: normal;
 }
-
+/* parent: info-card */
 .temperature{
     display: flex;
     gap: 2%;
+    justify-content: space-around;
+    margin-top: 2%;
 }
-
+/* parent : temperature*/
 .condition-icon{
    width: 25%;
-    border: 2px solid white;
+    border-radius: 8px;
+    border: 2px solid white
 }
 
+.temp_numeric{
+    font-size: larger;
+}
+
+/* parent: info-card */
+
+.supplementary{
+
+}
+
+.location{
+    
+}
