--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,11 @@
         {% if data.current %}
         <div class="info-card">
 
+
+            <div class="location">
+            <p>{{ data.location.name }},&nbsp{{ data.location.region }}</p>
+            </div>
+
             <div class="temperature">
                 <img class="condition-icon" src="{{ url_for('static', filename=iconpath) }}">
                 <div class="temp_numeric">
@@ -31,12 +36,33 @@
                 </div>
             </div>
 
-            <div class="supplementary">
-                <p>Feels-Like: {{ data.current.feelslike_f }}F</p>
-            </div>
 
-            <div class="location">
-            <p>{{ data.location.name }},&nbsp{{ data.location.region }}</p>
+
+            <div class="supp-parent">
+                <div class="supplementary">
+                    <p>{{ data.current.condition.text }}</p>
+                    <p>Feels-Like: {{ data.current.feelslike_f }}F</p>
+                </div>
+
+
+
+                <div class="most-info">
+                    <div class="supp-row-top">
+                        <div class="wind_info">
+                            <p>Wind:</p>
+                            <p>Speed: {{ data.current.wind_mph }}mph {{ data.current.wind_dir }}</p>
+                            <p> Gust: {{ data.current.gust_mph }}</p>
+                        </div>
+                        <div class="precip">
+                            <p>Cloud Coverage: {{ data.current.cloud }}%</p>
+                            <p>Humidity: {{ data.current.humidity }}</p>
+                            <p>UV Index: {{ data.current.uv }}</p>
+                            <p>Rainfall: {{ data.current.precip_in }}"</p>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
             
         {% else %}
