--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,10 @@
                             <p>Rainfall: {{ data.current.precip_in }}"</p>
                         </div>
                     </div>
+
+                    <div class="forcast">
+                        
+                    </div>
                 </div>
 
 
