finish main card layout, set up api for forcast

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                         <div class="wind_info">
                             <p>Wind:</p>
                             <p>Speed: {{ data.current.wind_mph }}mph {{ data.current.wind_dir }}</p>
-                            <p> Gust: {{ data.current.gust_mph }}</p>
+                            <p> Gust: {{ data.current.gust_mph }}mph</p>
                         </div>
                         <div class="precip">
                             <p>Cloud Coverage: {{ data.current.cloud }}%</p>
