--- a/static/styles.css
+++ b/static/styles.css
@@ -254,7 +254,7 @@ keep main page style confined to this area */
 /* parent: main page */
 .info-card{
     color: aliceblue;
-    height: 100vh;
+    height: auto;
     width: 75%;
     margin-top: 5%;
     gap: 5px;
@@ -329,7 +329,7 @@ keep main page style confined to this area */
 .most-info {
     margin-top: 2%;
     width: 100%;
-    height: 75%;
+    height: auto%;
     background-color: #2a243a;
     flex-direction: column;
     border-radius: 20px;
@@ -371,3 +371,14 @@ keep main page style confined to this area */
     text-wrap: no-wrap;
 }
 
+/* parent is most-info */
+.forecast{
+    width: 75%;
+    height: auto;
+    justify-content: center;
+}
+
+.table{
+    background-color: #002E2C;
+    border-radius: 20px;
+}
