--- a/templates/index.html
+++ b/templates/index.html
@@ -61,14 +61,42 @@
                         </div>
                     </div>
 
-                    <div class="forcast">
-                        
+                    <div class="forecast">
+                        <table class="table">
+                             <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">First</th>
+                                    <th scope="col">Last</th>
+                                    <th scope="col">Handle</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                        <td>Jacob</td>
+                                        <td>Thornton</td>
+                                        <td>@fat</td>
+                                </tr>
+                                 <tr>
+                                    <th scope="row">3</th>
+                                        <td>John</td>
+                                        <td>Doe</td>
+                                        <td>@social</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
-
-
             </div>
-            
+            <!--adjusted height of forcast, most info and info card 
+            but dont have signal to test it on the site yet-->
         {% else %}
             <p>error fetching data</p>
         {% endif %}
