--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
                     </div>
 
                     <div class="split-tables">
-                        <p>Daily Forcast</p>
+                        <p>Daily Forecast</p>
                     </div>
 
                     <div class="forcast">
